stylesheet/glide.css
@charset="UTF-8";

.slider {
    position: relative;
    width: 100%;
    height: 600px;
}

.slides {
    height: 100%;
    /* Clear fix */
    overflow: hidden;
    *zoom: 1;
    /**
     * Prevent blinking issue
     * Not tested. Experimental.
     */
    -webkit-backface-visibility: hidden;
    -webkit-transform-style: preserve-3d;
}

.slide {
    position: relative;
    height: 100%;
    float: left;
    clear: none;
    background-position: center;
    background-size: cover;
}

.slider-arrow {
    z-index: 6;
    position: absolute;
    display: block;
    background-image: url('../img/glide-arrows.png');
    width: 17px;
    height: 28px;
    bottom: 50%;
    margin: 0 0 -14px;
    padding: 0;
}

.slider-arrow--right {
    right: 30px;
    background-position: -17px 0;
}

.slider-arrow--left {
    left: 30px;
    background-position: 0 0;
}

.slider-nav {
    position: absolute;
    bottom: 30px;
}

.slider-nav__item {
    width: 12px;
    height: 12px;
    float: left;
    clear: none;
    display: block;
    margin: 0 5px;
    background: #fff;
}

.slider-nav__item:hover {
    background: #ccc;
}

.slider-nav__item--current {
    background: #ccc;
}

